...
              {t('auth.login.subtitle')}
            </Text>
          </View>

          <View style={styles.form}>
            <TextInput
              testID="username-input"
              label={t('auth.login.username')}
              value={username}
              onChangeText={setUsername}
              placeholder={t('auth.login.usernamePlace')}
              autoCapitalize="none"
            />

            <TextInput
              testID="password-input"
              label={t('auth.login.password')}
              value={password}
              onChangeText={setPassword}
              placeholder={t('auth.login.passwordPlace')}
              secureTextEntry
            />
...
